--- a/styles/index.css
+++ b/styles/index.css
@@ -8,10 +8,19 @@ ul {
     list-style: none;
 }
 
+input::placeholder {
+    color: #ffffff;
+}
+
 body {
     width: 100vw;
     height: 100vh;
     background-color: #051D3B;
+    font-family: 'Inter', sans-serif;
+}
+
+.container {
+    padding: 32px;
 }
 
 
@@ -21,12 +30,30 @@ body {
     justify-content: space-between;
 }
 
-.search-anything {
+.header-search-anything {
     width: 752px;
     height: 56px;
-
     background: rgba(255, 255, 255, 0.16);
     border-radius: 8px;
     border: none;
     padding-left: 8px;
+    color: #ffffff;
+    opacity: 0.64;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.header-user {
+    display: flex;
+    align-items: center;
+}
+.header-user img {
+    margin-right: 8px;
+}
+.header-user span {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #ffffff;
 }
