--- a/styles/index.css
+++ b/styles/index.css
@@ -96,3 +96,75 @@ body {
 .aside ul li a img {
     margin-right: 16px;
 }
+
+
+/* main */
+
+.main {
+    width: 752px;
+    height: 366px;
+}
+.main-container-code-editor {
+    border-radius: 8px;
+    padding: 32px;
+    background-color: #6BD1FF;
+}
+
+.main-container-decorator {
+    position: absolute;
+    z-index: 1;
+    padding: 16px;
+}
+
+.main-container-code-editor span {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+}
+.main-code-editor-decoration-red {
+    background-color: #FF5F56;
+}
+.main-code-editor-decoration-yellow {
+    background-color: #FFBD2E;
+    margin-left: 8px;
+}
+.main-code-editor-decoration-green {
+    background-color: #27C93F;
+    margin-left: 8px;
+}
+
+.main-container-code-editor {
+    margin-bottom: 32px;
+}
+.main-container-code-editor textarea {
+    width: 688px;
+    height: 302px;
+    border-radius: 8px;
+    resize: none;
+    position: relative;
+    background-color: #141414;
+    box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.24);
+
+    color: #ffffff;
+    padding: 16px;
+    padding-top: 52px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.main-button-highlight {
+    width: 100%;
+    height: 56px;
+    background: rgba(80, 129, 251, 0.08);
+    color: rgba(255, 255, 255, 1);
+    opacity: 0.8;
+    border-radius: 8px;
+    border: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    cursor: pointer;
+}
