--- a/styles/index.css
+++ b/styles/index.css
@@ -168,3 +168,61 @@ body {
     line-height: 24px;
     cursor: pointer;
 }
+
+
+/* form-project */
+
+.form-project {
+    display: flex;
+    flex-direction: column;
+    width: 272px;
+}
+
+.form-project h2 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    letter-spacing: 0.4em;
+    text-transform: uppercase;
+    color: #ffffff;
+    margin-bottom: 16px;
+}
+
+.form-project-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-project-info input {
+    background: rgba(255, 255, 255, 0.16);
+    border-radius: 8px;
+    height: 56px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+    opacity: 0.64;
+    border: none;
+    padding-left: 16px;
+    margin-bottom: 16px;
+}
+
+.form-project-info textarea {
+    height: 80px;
+    font-family: 'Inter';
+    background: rgba(255, 255, 255, 0.16);
+    border-radius: 8px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+    opacity: 0.64;
+    border: none;
+    padding: 16px;
+    resize: none;
+    margin-bottom: 40px;
+}
+
