--- a/styles/index.css
+++ b/styles/index.css
@@ -192,6 +192,7 @@ body {
 .form-project-info {
     display: flex;
     flex-direction: column;
+    margin-bottom: 32px;
 }
 
 .form-project-info input {
@@ -226,3 +227,47 @@ body {
     margin-bottom: 40px;
 }
 
+.form-project-info select, option {
+    height: 56px;
+    background: rgba(255, 255, 255, 0.16);
+    border-radius: 8px;
+    padding: 16px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+    opacity: 0.64;
+    border: 0;
+    margin-bottom: 16px;
+}
+
+.form-project-info input[type="color"] {
+    width: 100%;
+    height: 68px;
+    border: 1px solid #ffffff;
+    cursor: pointer;
+    background-color: transparent;
+    padding: 4px;
+    border-radius: 8px;
+}
+.form-project-info input[type="color"]::-webkit-color-swatch {
+    border-radius: 4px;
+    border: none;
+}
+
+.form-project-button {
+    height: 56px;
+    background: #5081FB;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: #051D3B;
+}
